--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -56,7 +56,7 @@
                     android:layout_centerInParent="true"
                     android:textColor="#FFFFFF"
                     android:typeface="monospace"
-                    android:text="@{String.format(@string/status_format, BindingUtils.string(cstatus.status), BindingUtils.string(cstatus.action), DateFormat.format(@string/status_date_format,cstatus.date))}"/>
+                    android:text="@{String.format(@string/status_format, BindingUtils.status(cstatus.status), BindingUtils.action(cstatus.action), DateFormat.format(@string/status_date_format,cstatus.date))}"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
