--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -38,33 +38,44 @@
             android:layout_height="20dp"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay">
-            <RelativeLayout
+            <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:paddingRight="16dp"
                 android:layout_height="match_parent">
                 <TextView
+                    android:id="@+id/infopath"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
                     android:textColor="#FFFFFF"
                     android:typeface="monospace"
                     android:text="@{fview.currentPath}"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    />
                 <TextView
+                    android:id="@+id/infopagenum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:textColor="#FFFFFF"
-                    android:typeface="monospace"
-                    android:text="@{String.format(@string/status_format, BindingUtils.status(cstatus.status), BindingUtils.action(cstatus.action), DateFormat.format(@string/status_date_format,cstatus.date))}"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_weight="1"
                     android:textColor="#FFFFFF"
                     android:typeface="monospace"
                     android:text="@{String.valueOf(fview.pageNumber + 1) + '/' + String.valueOf(fview.maxPageNumber)}"/>
-            </RelativeLayout>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    />
+                <TextView
+                    android:id="@+id/infostatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#FFFFFF"
+                    android:typeface="monospace"
+                    android:text="@{String.format(@string/status_format, BindingUtils.status(cstatus.status), BindingUtils.action(cstatus.action), DateFormat.format(@string/status_date_format,cstatus.date))}"/>
+            </LinearLayout>
             </android.support.v7.widget.Toolbar>
 
     </RelativeLayout>
