many new functions. new dialog layouts. new mei import\export functions.

--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -40,6 +40,12 @@
             android:title="Open"
             android:icon="@drawable/folderoutline"
             app:showAsAction="always" />
+
+        <item
+            android:id="@+id/action_settings"
+            android:title="Settings"
+            android:icon="@drawable/settings"
+            app:showAsAction="always" />
     </group>
 
     <group android:id="@+id/group_navigation">
