--- a/src/main/res/layout/dialog_settings.xml
+++ b/src/main/res/layout/dialog_settings.xml
@@ -15,6 +15,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"/>
+    <RadioGroup
+        android:id="@+id/dialog_settings_horover_type"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <RadioButton android:id="@+id/dialog_settings_horover_type_points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dialog_settings_points" />
+        <RadioButton android:id="@+id/dialog_settings_horover_type_percents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dialog_settings_percents" />
+    </RadioGroup>
     <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:orientation="horizontal"
