Line and page breaks in MEI. Dialogs will be aligned to top of screen. Undo\Redo functions. The history feature is based on command pattern. supported operations: create, remove, cut, adjust measure, adjust movement. The default size of used stack = 50. This value can be changed in settings menu.

--- a/src/main/res/layout/dialog_settings.xml
+++ b/src/main/res/layout/dialog_settings.xml
@@ -29,6 +29,18 @@
             android:layout_height="wrap_content"
             android:text="@string/dialog_settings_percents" />
     </RadioGroup>
+    <TextView
+        android:id="@+id/dialog_settings_undosize_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:labelFor="@+id/dialog_settings_undosize_input"
+        android:layout_marginStart="10dp"/>
+    <EditText
+        android:id="@+id/dialog_settings_undosize_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"/>
     <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:orientation="horizontal"
