Fix label for brush icon

--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
     <group android:id="@+id/group_other">
         <item
             android:id="@+id/action_brush"
-            android:title="Erase"
+            android:title="Brush"
             android:icon="@drawable/brush_on"
             app:showAsAction="always" />
 
