Download Images from IIIF manifest json file
Changes on user interface to add download button.

Functions added on MainActivity.java file to download images from url

--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -58,6 +58,12 @@
             android:title="Open"
             android:icon="@drawable/folderoutline"
             app:showAsAction="always" />
+        <item
+            android:id="@+id/action_download_IIIF"
+            android:title="IIIF manifest"
+            android:icon="@drawable/download"
+            app:showAsAction="always" />
+
 
         <item
             android:id="@+id/action_settings"
