--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <import type="zemfi.de.vertaktoid.FacsimileView"/>
         <import type="zemfi.de.vertaktoid.model.Facsimile"/>
@@ -16,9 +18,7 @@
 
     </data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -75,6 +75,7 @@
                     android:textColor="#FFFFFF"
                     android:typeface="monospace"
                     android:text="@{String.format(@string/status_format, BindingUtils.status(cstatus.status), BindingUtils.action(cstatus.action), DateFormat.format(@string/status_date_format,cstatus.date))}"/>
+
             </LinearLayout>
             </android.support.v7.widget.Toolbar>
 
