adding upbeat measures #41
enhancing issue #41

--- a/src/main/res/layout/dialog_settings.xml
+++ b/src/main/res/layout/dialog_settings.xml
@@ -58,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dialog_settings_mei_canonical" />
+
         <RadioButton android:id="@+id/dialog_settings_annotation_type_oriented"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -67,6 +68,20 @@
             android:layout_height="wrap_content"
             android:text="@string/dialog_settings_mei_polygonal" />
     </RadioGroup>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="Upbeat" />
+
+    <RadioButton android:id="@+id/upbeat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Upbeat" />
+
     <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:orientation="horizontal"
